# junas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  ADVANCED_REASONING.md  AGENT-RUNBOOK.md  AGENTS.md  AGENT_ONBOARDING.md  ARCHITECTURE-PIVOT-24-MAY.md  ARCHITECTURE.md  ARCHITECTURE_25_MAY.txt  ARCHITECTURE_26_MAY.txt  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.public-demo  FILE_PROCESSING_DOCUMENTATION.md  GAPS-TO-REMEDY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATIONS.md  LICENSE  ML_NER_DOCUMENTATION.md  (+67 more)
.githooks/: pre-commit
.prometheus-multiproc/: counter_14895.db  gauge_livemin_14895.db  histogram_14895.db
Casks/: aki.rb
api/: .dockerignore  .env.example  Dockerfile  README.md  client.py  entrypoint.sh  go.mod  go.sum  main.go  main.py  main_test.go  railway.toml  requirements.txt  schemas.py
archive/: README.md
artifacts/: manifest.json
backend/: .env.example  README.md  cache.py  client.py  main.py  observability.py  package.json  pyproject.toml  schemas.py
clustering/: isolation_forest.py
config/: runtime_calibrated.toml
configs/: README.md  __init__.py  artifacts.py  eval_1.toml  eval_2.toml  eval_3.toml  eval_4.toml  eval_7.toml  runtime.py  runtime_calibrated.toml
docs/: FRONTEND_FEATURES.md  P1_P2_COLLABORATIVE_FLOW_REQUIREMENTS.md  PRODUCTION.md  PRODUCT_PLAN.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_QUICK_START.md  RELEASE_WORKFLOW.md  SELF_HOSTING.md  TRAINING.md  accuracy.md  admin-security.md  apple-shortcuts.md  architecture.md  assumption.md  backend_only_audit.md  candidate_corpus_status.md  codebase-prune-audit-2026-05-26.md  cold-start-guide.md  community-rule-packs.md  contributor-observability.md  coverage-matrix.md  customer-changelog-format.md  dataset-license.md  demo_runbook.md  deployment-customer-managed.md  deployment-hardening.md  deployment-local-only.md  deployment-managed-llm.md  deployment-pilot-rollout.md  deployment-rollback.md  dispute-process.md  distribution.md  engineering-blog-draft.md  external-rule-packs.md  feedback-loop.md  first_5_minutes.md  homebrew-cask.md  install.md  (+39 more)
embeddings/: generate_embeddings.py  inference.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  middleware.ts  package-lock.json  package.json  script.js  style.css  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend-chat/: index.html  script.js  style.css
frontend-email/: index.html  script.js  style.css
frontend-slack/: index.html  script.js  style.css
helper/: training_corpus.py
integrations/: README.md
kilter-together-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
kilter-together-mobile/: .gitignore  README.md  pubspec.yaml
layer0-parser/: parse_docs.py
layer1-lexicon/: filter.py
layer2-embeddings/: generate_embeddings.py  inference.py
layer3-clustering/: isolation_forest.py
layer5-mosaic/: inference.py
layer6-regression/: inference.py  train.py
lexicon/: filter.py  restricted_list.json
model-1/: classifier.py  inference.py  train_isolation_forest.py
model-2/: classifier.py  inference.py
packaging/: README.md  aki-sidecar.spec  aki_sidecar_entrypoint.py  browser_extension  junas-local.spec  junas-sidecar.spec  junas_local_entrypoint.py  junas_sidecar_entrypoint.py  kaypoh-local.spec  kaypoh_local_entrypoint.py  office_addin  word_addin
privacy-common/: Cargo.toml
privacy-core/: Cargo.toml
privacy-core/fixtures/: gitleaks_rules.toml
privacy-core/fixtures/redaction_corpus/: synthetic-corpus.toml
privacy-core/src/: benchmarks.rs  config.rs  lib.rs  obs_plugin.rs  pipeline.rs  pipeline_runner.rs  time_machine.rs
privacy-core/src/capture/: fps.rs  macos.rs  mod.rs  multi_display.rs  pty.rs  region.rs  window_picker.rs
privacy-core/src/capture/linux/: mod.rs  wayland.rs  wlr_screencopy.rs  x11.rs
privacy-core/src/detection/: default_patterns.rs  expand.rs  external_rules.rs  frame_diff.rs  incremental.rs  line_expand.rs  local_llm.rs  mod.rs  ocr.rs  patterns.rs  pii_patterns.rs  profiles.rs  registry.rs  scanner.rs  training.rs  user_patterns.rs  whitelist.rs
privacy-core/src/transform/: ascii.rs  blur.rs  cartoon.rs  compositor.rs  intensity.rs  mod.rs  model_download.rs  neural.rs  pixelate.rs  registry.rs
privacy-output/: Cargo.toml
privacy-output/src/: audio.rs  autodetect.rs  coremedia.rs  lib.rs  mjpeg.rs  obs_websocket.rs  recorder.rs  tray.rs  twitch.rs  v4l2.rs
privacy-tui/: Cargo.toml
privacy-tui/src/: app.rs  control_server.rs  demo.rs  doctor.rs  event.rs  foreground.rs  logging.rs  main.rs  offline_redact.rs  shutdown.rs  tui.rs
privacy-tui/src/ui/: braille.rs  detection_log.rs  heatmap.rs  help_overlay.rs  latency_graph.rs  mod.rs  pattern_manager.rs  stats_bar.rs  stats_overlay.rs  window_selector.rs
regression/: inference.py
reports/: .train_validate_state.json  README.md  eval_2026-02-27_16-16-00.md  eval_2026-02-27_16-20-52.md  eval_2026-02-27_16-24-21.md  latency_2026-03-21_22-12-14.csv  latency_2026-03-21_22-12-14.json  latency_2026-03-21_22-12-14.txt  latency_2026-03-22_21-52-49.txt  latency_2026-03-23_15-13-06.txt  latency_2026-03-23_15-36-07.txt  latency_2026-03-23_15-53-11.txt  latency_2026-03-24_08-45-40.txt  latency_2026-03-24_09-25-09.txt  latency_2026-03-24_09-31-37.txt  latency_2026-03-24_09-41-35.txt  latency_2026-03-24_09-42-47.txt  latency_2026-03-24_09-46-01.txt  latency_2026-03-24_09-54-05.txt  latency_2026-03-24_09-57-52.txt  latency_2026-03-24_10-20-16.txt  latency_2026-03-24_10-26-16.txt  latency_2026-03-24_10-33-32.txt  latency_2026-03-24_10-36-07.txt  latency_2026-03-24_10-38-09.txt  (+35 more)
script/: build_and_run.sh  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: document.rs  error.rs  keychain.rs  lib.rs  ml.rs  providers.rs  streaming.rs  tools.rs
(+7123 files in other folders)
