[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kilter-together"
version = "2.0.0"
description = "Backend for collaborative climbing-board sessions"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "cryptography>=43",
  "selectolax>=0.3.21",
  "tenacity>=9.0",
  "structlog>=24.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-audit>=2.8",
  "bandit>=1.7.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kt.migrations" = ["*.sql"]
"kt.providers.moonboard.data" = ["*.json", "LICENSE"]
"kt.boards.data" = ["*.geojson"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["kt"]
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
