[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaypoh"
version = "0.1.0"
description = "Pre-send PII anonymisation and MNPI review runtime. Ships as kaypoh-local (offline desktop SKU) and kaypoh-server (deterministic review plus opt-in retrieval/LLM adjudication)."
readme = "README.md"
requires-python = ">=3.10"
# base = kaypoh-local. Deterministic engine + Presidio + spaCy + FastAPI + extractors.
# No torch, transformers, sentence-transformers, redis, xgboost, scikit-learn, pandas, or accelerate.
# httpx stays because it is also the Python client transport.
dependencies = [
  "numpy>=1.26",
  "spacy>=3.7.0",
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "fastapi>=0.109.0",
  "httpx>=0.27.0,<1.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.5.0",
  "prometheus-client>=0.20.0",
  "pypdf>=4.0.0",
  "cryptography>=42.0.0",
  "PyJWT>=2.8.0",
  "Pillow>=10.0.0",
]

[project.optional-dependencies]
# install kaypoh[local] for the desktop SKU. Equivalent to the base install but documents intent.
local = []
# install kaypoh[ocr] to enable local Tesseract image OCR.
ocr = [
  "pytesseract>=0.3.10",
  "pypdfium2>=4.30.0",
]
# install kaypoh[server] for opt-in public evidence + LLM adjudication surfaces.
# The archived classifier stack is intentionally not a dependency of this extra.
server = [
  "boto3>=1.34.0",
  "google-cloud-vision>=3.7.0",
  "azure-ai-vision-imageanalysis>=1.0.0",
]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.0.0",
  "ruff>=0.6.9",
]
packaging = [
  "pyinstaller>=6.3",
]

[project.scripts]
kaypoh-watch = "kaypoh.desktop.watch:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kaypoh*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"kaypoh.review" = ["jurisdictions_data/*.toml"]
"kaypoh.data.frequency" = ["MANIFEST.toml"]
"kaypoh.data.frequency.SG" = ["*.csv"]
"kaypoh.data.frequency.UK" = ["*.csv"]
"kaypoh.data.frequency.AU" = ["*.csv"]
"kaypoh.data.frequency.JP" = ["*.csv"]
"kaypoh.data.frequency.KR" = ["*.csv"]
"kaypoh.data.frequency.US" = ["*.csv"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
exclude = [
  "^archive/",
  "^reports/",
]

[[tool.mypy.overrides]]
module = [
  "kaypoh.backend.main",
  "kaypoh.backend.cache",
  "kaypoh.backend.observability",
  "kaypoh.backend.schemas",
  "kaypoh.configs.runtime",
]
disallow_untyped_defs = true
