[package]
name = "privacy-core"
version.workspace = true
edition.workspace = true

[dependencies]
privacy-common = { path = "../privacy-common" }
crossbeam-channel = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
leptess = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-graphics = "0.23"
core-foundation = "0.10"
core-video-rs = "0.3"
core-media-rs = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
xcb = "1"
ashpd = "0.10"
pipewire = "0.8"
