[package]
name = "privacy-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aki"
path = "src/main.rs"

[dependencies]
privacy-common = { path = "../privacy-common" }
privacy-core = { path = "../privacy-core" }
privacy-output = { path = "../privacy-output" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
