[package]
name = "junas"
version = "0.1.0"
description = "BYOK AI-powered legal analysis desktop app"
authors = ["gongahkia"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
security-framework = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
futures-util = "0.3"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
sha2 = "0.10"
